addButton now has position absolute in upperList, padding at the bottom of the list ensures everything is readable

--- a/src/Components/Blockchain/Blockchain.scss
+++ b/src/Components/Blockchain/Blockchain.scss
@@ -74,6 +74,10 @@
   width: 100%;
 }
 
+.block .upperList {
+  padding-bottom: 0;
+}
+
 .block .blockDescription {
   padding: 0;
   width: 100%;
